# airas-20251023-075135-matsuzawa

./: README.md  output.txt  pyproject.toml
.github/workflows/: compile_latex_with_open_code.yml  run_evaluation_with_agent.yml  run_evaluation_with_claude_code.yml  run_evaluation_with_open_code.yml  run_experiment_with_claude_code.yml  run_full_experiment_with_open_code_2.yml  run_trial_experiment_with_open_code_2.yml
.research/: research_history.json
.research/iteration1/: config.yaml  stderr.txt  stdout.txt
.research/iteration1/comparative-1-Small-CNN-1.2M-CIFAR-10/: metrics.json
.research/iteration1/comparison/: aggregated_metrics.json  significance_tests.json
.research/iteration1/proposed-Small-CNN-1.2M-CIFAR-10/: metrics.json
.research/latex/iclr2024/: .chktexrc  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_details.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/html_subgraph/: convert_to_html.txt
branches/main/: index.html
config/: config.yaml
config/run/: comparative-1-Small-CNN-1.2M-CIFAR-10.yaml  proposed-Small-CNN-1.2M-CIFAR-10.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+19 files in other folders)
