[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boil_c_experiments"
version = "0.1.0"
description = "Cost-Aware BOIL Experiments with Hydra"
requires-python = ">=3.9"

dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "wandb>=0.16.0",
    "optuna>=3.4.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]
